[package]
name = "desafio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
